[project]
name = "personal-finance"
version = "0.1.0"
description = "Monorepo for personal finance management"
authors = [
    {name = "Dmitry Mukhutdinov", email = "flyingleafe@gmail.com"},
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/packages/tronscan-client",
    "black>=24.1.1",
]